RESOLVED FIXED282254
ServiceWorkerThread does not need to be CanMakeWeakPtr
https://bugs.webkit.org/show_bug.cgi?id=282254
Summary ServiceWorkerThread does not need to be CanMakeWeakPtr
youenn fablet
Reported 2024-10-29 10:27:31 PDT
ServiceWorkerThread does not need to be CanMakeWeakPtr
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-29 10:28:06 PDT
youenn fablet
Comment 2 2024-10-29 11:54:17 PDT
EWS
Comment 3 2024-10-30 00:50:03 PDT
Committed 285886@main (e0995e9acfe5): <https://commits.webkit.org/285886@main> Reviewed commits have been landed. Closing PR #35882 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.