ServiceWorkerThread does not need to be CanMakeWeakPtr https://bugs.webkit.org/show_bug.cgi?id=282254 rdar://problem/138851633

Reviewed by Sihui Liu.

Instead using thread safe weak pointer.

* Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:
(WebCore::ServiceWorkerThread::queueTaskToPostMessage):
(WebCore::ServiceWorkerThread::queueTaskToFireInstallEvent):
(WebCore::ServiceWorkerThread::queueTaskToFireActivateEvent):
(WebCore::ServiceWorkerThread::queueTaskToFirePushEvent):
(WebCore::ServiceWorkerThread::queueTaskToFirePushNotificationEvent):
(WebCore::ServiceWorkerThread::queueTaskToFirePushSubscriptionChangeEvent):
(WebCore::ServiceWorkerThread::queueTaskToFireNotificationEvent):
(WebCore::ServiceWorkerThread::queueTaskToFireBackgroundFetchEvent):
(WebCore::ServiceWorkerThread::queueTaskToFireBackgroundFetchClickEvent):
(WebCore::ServiceWorkerThread::start):
* Source/WebCore/workers/service/context/ServiceWorkerThread.h:

Canonical link: https://commits.webkit.org/285886@main